<resources>
    <string name="app_name">PuzzlePal</string>
    <string name="post">Post</string>
    <string name="send">Send</string>
    <string name="username">zhukevin</string>
    <string name="message">Some short sample text.</string>
    <string name="history">History</string>
    <string name="puzzle_piece_history">Puzzle Piece History</string>
    <string name="album">Album</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="preview">Image</string>
    <string name="chattImage">chattImage</string>
    <string name="videoView">videoView</string>
    <string name="defaultHistory">No current puzzle entries</string>
    <string name="defaultPieceHistory">No current puzzle piece entries</string>
    <string name="title_activity_puzzle_piece">PuzzlePieceActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="fail_title">Error</string>
    <string name="error_message">Puzzle image could not be processed. Please retake image with bright lighting and no blurriness</string>
    <string name="retake_photo">Retake</string>
    <string name="exit_alert_dialog">Exit</string>

    <string name="photo_description">Would you like to upload your puzzle entry from storage?</string>
    <string name="dimensions_popup_title">Puzzle Dimensions and Piece Count</string>
    <string name="height_hint">Height in Inches</string>
    <string name="width_hint">Width in Inches</string>
    <string name="piece_count_hint">Total Piece Count</string>
    <string name="ok">Ok</string>
</resources>