<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".PostActivity">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/username"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:text="@string/message"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/albumButton"
        android:contentDescription="@string/album"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        android:background="@drawable/border"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <!--  This is the camera button -->
    <ImageButton
        android:id="@+id/cameraButton"
        android:contentDescription="@string/camera"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        app:layout_constraintEnd_toStartOf="@+id/albumButton"
        android:background="@drawable/border"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <!--  This is the video button -->
    <ImageButton
        android:id="@+id/videoButton"
        android:contentDescription="@string/video"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        app:layout_constraintEnd_toStartOf="@+id/cameraButton"
        android:background="@android:color/transparent"
        app:srcCompat="@android:drawable/presence_video_online" />

    <ImageView
        android:id="@+id/previewImage"
        android:contentDescription="@string/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/messageTextView"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        />
</androidx.constraintlayout.widget.ConstraintLayout>